--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet" />
-      <link href="https://fonts.googleapis.com/css2?family=Wavefont:wght@4..1000&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet">
 
     <title>ES Web Portfolio</title>
   </head>
